Fixed bug where cover page was cutting off on moile browsers due to inconsistencies with how vh is calculated

--- a/src/sections/styles/cover-page.css
+++ b/src/sections/styles/cover-page.css
@@ -5,7 +5,7 @@
 .cover-sheet{
     position: fixed;
     background-color: var(--WHITE);
-    min-height: 100%;
+    min-height: 200%;
     min-width: 100%;
     z-index: 1000;
 }
@@ -15,7 +15,7 @@
     flex-direction: column;
     justify-content: space-between;
     position: absolute;
-    height: 100vh;
+    height: 100%;
     z-index: 1001;
     font-size: var(--greeting-font-size);
     float: none;
@@ -27,7 +27,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 90vw;
+    height: 90%;
     max-width: 90vw;
     margin-left: 5vw;
     margin-right: 5vw;
